cambios en el formato de impresion

--- a/v4posme_maui/v4posme_maui.csproj
+++ b/v4posme_maui/v4posme_maui.csproj
@@ -77,6 +77,7 @@
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
 		<PackageReference Include="Unity" Version="5.11.10" />
+		<PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
 		<PackageReference Include="ZXing.Net.Maui" Version="0.4.0" />
 		<PackageReference Include="ZXing.Net.Maui.Controls" Version="0.4.0" />
 	</ItemGroup>
@@ -90,6 +91,18 @@
 	  <Reference Include="CommunityToolkit.Maui">
 	    <HintPath>Command\CommunityToolkit.Maui.dll</HintPath>
 	  </Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Views\Abonos\06PrinterPage.xaml.cs">
+	    <DependentUpon>06PrinterPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\Abonos\06PrinterPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
