--- a/v4posme_maui/Platforms/Android/AndroidManifest.xml
+++ b/v4posme_maui/Platforms/Android/AndroidManifest.xml
@@ -22,6 +22,10 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
 	<uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
 	<queries>
 		<intent>
