reporte de cierre

--- a/v4posme_maui/v4posme_maui.csproj
+++ b/v4posme_maui/v4posme_maui.csproj
@@ -84,7 +84,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Models\" />
 	  <Folder Include="Command\" />
 	</ItemGroup>
 
@@ -102,6 +101,18 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Views\Abonos\06PrinterPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\More\MorePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\More\ReporteVenta\ReporteVentaPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\More\Visita\VisitaFormPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\More\Visita\VisitaPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
