--- a/v4posme_maui/Platforms/Android/AndroidManifest.xml
+++ b/v4posme_maui/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.v4posme.app">
 	<!--<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34" />-->
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:usesCleartextTraffic="true" android:requestLegacyExternalStorage="true"></application>
+	<application android:allowBackup="true"
+				 android:label="posMe"
+				 android:icon="@mipmap/appicon"
+				 android:usesCleartextTraffic="true" 
+				 android:requestLegacyExternalStorage="true">
+	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
