--- a/v4posme_maui/v4posme_maui.csproj
+++ b/v4posme_maui/v4posme_maui.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android</TargetFrameworks>
+		<TargetFramework>net8.0-android</TargetFramework>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
 
@@ -26,7 +26,7 @@
 		<ApplicationId>com.posme.v4posme_maui</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.0.1</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>1.0.2</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
@@ -35,7 +35,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<Title>posMe</Title>
 		<Description>Aplicacion posMe</Description>
 		<Copyright>posMe 2025</Copyright>
@@ -76,7 +76,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />        
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Maui.Controls.Core" Version="8.0.90" />
+		<PackageReference Include="Microsoft.Maui.Controls.Core" Version="8.0.100" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Plugin.BLE" Version="3.1.0" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.8" />
@@ -100,7 +100,10 @@
 
 	<ItemGroup>
 	  <Compile Update="Views\Abonos\06PrinterPage.xaml.cs">
-	    <DependentUpon>06PrinterPage.xaml</DependentUpon>
+		<DependentUpon>06PrinterPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\Abonos\07PrinterPage.xaml.cs">
+			<DependentUpon>07PrinterPage.xaml</DependentUpon>
 	  </Compile>
 	  <Compile Update="Views\Invoices\03DataInvoiceCreditPage.xaml.cs">
 	    <DependentUpon>03DataInvoiceCreditPage.xaml</DependentUpon>
@@ -125,6 +128,10 @@
 	  </Compile>
 	  <Compile Update="Views\More\Visita\02VisitaFormPage.xaml.cs">
 	    <DependentUpon>02VisitaFormPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\Abonos\07PrinterPage.xaml.cs">
+	    <DependentUpon>25PrinterPage.xaml</DependentUpon>
+	    <SubType>Code</SubType>
 	  </Compile>
 	</ItemGroup>
 
